refactor some code n add some swagger documentation
