# docs/swagger.yaml
@@ -9,6 +9,45 @@ definitions:
       user:
         $ref: '#/definitions/dto.UserResponseDTO'
     type: object
+  dto.CreateNewsLetterDTO:
+    properties:
+      base_image:
+        type: string
+      id_admin:
+        type: integer
+      news_letter:
+        type: string
+      title:
+        type: string
+    required:
+    - id_admin
+    - news_letter
+    - title
+    type: object
+  dto.Event:
+    properties:
+      name:
+        type: string
+      payment_status:
+        type: string
+      status:
+        type: string
+      team:
+        items:
+          $ref: '#/definitions/dto.Team'
+        type: array
+      ticket:
+        $ref: '#/definitions/dto.Ticket'
+    type: object
+  dto.Member:
+    properties:
+      email:
+        type: string
+      name:
+        type: string
+      role:
+        type: string
+    type: object
   dto.RefreshTokenDTO:
     properties:
       refresh_token:
@@ -109,6 +148,46 @@ definitions:
       team:
         $ref: '#/definitions/dto.RegistraionTeamResponse'
     type: object
+  dto.ResponseEvents:
+    properties:
+      events:
+        items:
+          $ref: '#/definitions/dto.Event'
+        type: array
+      user:
+        $ref: '#/definitions/dto.User'
+    type: object
+  dto.Team:
+    properties:
+      members:
+        items:
+          $ref: '#/definitions/dto.Member'
+        type: array
+      team_name:
+        type: string
+    type: object
+  dto.Ticket:
+    properties:
+      issued_at:
+        type: string
+      qr_code_url:
+        type: string
+      ticket_id:
+        type: string
+      type:
+        type: string
+      valid_until:
+        type: string
+    type: object
+  dto.UpdateNewsLetterDTO:
+    properties:
+      base_image:
+        type: string
+      news_letter:
+        type: string
+      title:
+        type: string
+    type: object
   dto.UpdateUserProfileDTO:
     properties:
       birth_date:
@@ -130,6 +209,17 @@ definitions:
     - institusi
     - name
     - nim
+    type: object
+  dto.User:
+    properties:
+      degree:
+        type: string
+      email:
+        type: string
+      name:
+        type: string
+      university:
+        type: string
     type: object
   dto.UserResponseDTO:
     properties:
@@ -164,6 +254,23 @@ definitions:
         type: string
     required:
     - google_id_token
+    type: object
+  entity.NewsLetter:
+    properties:
+      base_image:
+        type: string
+      created_at:
+        type: string
+      id_admin:
+        type: integer
+      id_news_letter:
+        type: integer
+      news_letter:
+        type: string
+      title:
+        type: string
+      updated_at:
+        type: string
     type: object
   helper.Response:
     properties:
@@ -235,6 +342,360 @@ paths:
       summary: Validate Google ID Token
       tags:
       - Auth
+  /dashboard/{acara}/{count}/{page}:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve all dashboard data based on the specified event type (seminar,
+        hackaton, cp).
+      parameters:
+      - description: Event type (seminar, hackaton, cp)
+        in: path
+        name: acara
+        required: true
+        type: string
+      - description: Number of items per page
+        in: path
+        name: count
+        required: true
+        type: integer
+      - description: Page number
+        in: path
+        name: page
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                data: {}
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                message:
+                  type: string
+              type: object
+      summary: Get All Dashboard
+      tags:
+      - Dashboard
+  /dashboard/{acara}/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a specific dashboard event based on the event type and ID.
+      parameters:
+      - description: Event type (seminar, hackaton, cp)
+        in: path
+        name: acara
+        required: true
+        type: string
+      - description: Event ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                message:
+                  type: string
+              type: object
+      summary: Delete Dashboard Event
+      tags:
+      - Dashboard
+    put:
+      consumes:
+      - application/json
+      description: Update a specific dashboard event based on the event type and ID.
+      parameters:
+      - description: Event type (seminar, hackaton, cp)
+        in: path
+        name: acara
+        required: true
+        type: string
+      - description: Event ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Event data to update
+        in: body
+        name: request
+        required: true
+        schema: {}
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                message:
+                  type: string
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                message:
+                  type: string
+              type: object
+      summary: Update Dashboard Event
+      tags:
+      - Dashboard
+  /dashboard/events/{id_user}:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve all events associated with a specific user.
+      parameters:
+      - description: User ID
+        in: path
+        name: id_user
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.ResponseEvents'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                message:
+                  type: string
+              type: object
+      summary: Get User Events
+      tags:
+      - Dashboard
+  /newsletter:
+    post:
+      consumes:
+      - application/json
+      description: Create a new newsletter
+      parameters:
+      - description: Create Newsletter
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateNewsLetterDTO'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/entity.NewsLetter'
+              type: object
+        "400":
+          description: Invalid input
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+        "500":
+          description: Create failed
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: Create Newsletter
+      tags:
+      - Newsletter
+  /newsletter/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a newsletter by ID
+      parameters:
+      - description: Newsletter ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Newsletter deleted
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+        "400":
+          description: Invalid ID
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+        "500":
+          description: Delete failed
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: Delete Newsletter
+      tags:
+      - Newsletter
+    get:
+      consumes:
+      - application/json
+      description: Get a newsletter by ID
+      parameters:
+      - description: Newsletter ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/entity.NewsLetter'
+              type: object
+        "400":
+          description: Invalid ID
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+        "404":
+          description: Not found
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: Get Newsletter
+      tags:
+      - Newsletter
+    put:
+      consumes:
+      - application/json
+      description: Update a newsletter by ID
+      parameters:
+      - description: Newsletter ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Update Newsletter
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UpdateNewsLetterDTO'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/entity.NewsLetter'
+              type: object
+        "400":
+          description: Invalid input or ID
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+        "500":
+          description: Update failed
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: Update Newsletter
+      tags:
+      - Newsletter
   /profile/my:
     get:
       produces:
